--- a/pets.html
+++ b/pets.html
@@ -3,26 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <title>Meet our Furry Pals</title>
 </head>
+
 <body>
-    <a href="#content" class="skip" >Skip to content</a>
-    <header>
+    <a href="#main" class="skip">Skip to main content</a>
+    <header class="header">
+        <a href="#" class="logo"> Pet Pantry </a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+        <a href="#main" class="skip">Skip to main content</a>
         <nav>
-                <ul>
-                    <li><a href = "index.html">Home</a></li>
-                    <li class="active"><a href ="pets.html">Pets</a></li>
-                    <li><a href = "recipes.html">Recipes</a></li>
-                    <li><a href = "travel.html">Travel</a></li>
-                </ul>
-            </nav>
-            <h1>Pets</h1>
+        <ul class="navbar">
+            <li><a href="index.html" > Home </a></li>
+            <li><a href="pets.html" class="active"> Pets </a></li>
+            <li><a href="recipes.html"> Recipes </a></li>
+            <li><a href="travel.html"> Travel </a></li>
+        </ul>
+        </nav>
     </header>
 
-    <main id="content">
-        <div>
+<main>
+    <section class="pets-page" id="pets-page">   
+        <div class="pets-title">
+             <h1>Meet Our Furry Pals</h1>
+             <p>Here are some of our favorite furry pals!</p> 
+        </div>
+ 
+        <div class = "pets-container">
             <h2>Say Hi to Bacon</h2>
-            <img src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/bacon.jpg" width = "300" height="300" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/bacon_bandana.JPG" width ="300" height="300" alt = "Brown labradoodle wearing an orange bandana">
+            <img src="images/bacon_graduation.JPG"  width ="300" height="300" alt="Small labradoodle puppy wearing a graduation cap and gown">
+            <video width="200" height="300" controls>
+            <source src="images/bacon_agility.mov">
+            Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
+            </video>
+            <img src="images/bacon_halloween.JPG"  width ="300" height="300" alt="Brown labradoodle wearing a pirate costume">
             <ul>
                 <li>Age: 9 years old (56 years young!)</li>
                 <li>Breed: Labradoodle</li>
@@ -39,21 +63,14 @@
                 <li>There is also a lot of rolling. Lots and lots of rolling.</li>
                 <li>He likes anyone who gives belly rubs</li>
                 <li>He will beat you in a game of tug-of-war</li>
-                <li>He will sneak onto the couch no matter how many times you say no</li>
-            </ul>
-            <h3>Photo Gallery</h3>
-            <img src="images/bacon_bandana.JPG" width ="300" height="300" alt = "Brown labradoodle wearing an orange bandana">
-            <img src="images/bacon_graduation.JPG"  width ="300" height="300" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <video width="200" height="300" controls>
-                <source src="images/bacon_agility.mov">
-                Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
-            </video>
-            <img src="images/bacon_halloween.JPG"  width ="300" height="300" alt="Brown labradoodle wearing a pirate costume">
-        </div>
+            <li>He will sneak onto the couch no matter how many times you say no</li>
+        </ul>
 
-        <div>
             <h2>Say Hi to Daisy</h2>
             <img src="images/daisy_1.jpg" width ="300" height="300" alt="Golden Retriever fetching a tennis ball in the pool">
+            <img src="images/daisy_3.jpg" width ="300" height="300" alt = "Golden Retriever eating dog food">
+                <img src="images/daisy_2.jpg" width ="300" height="300" alt = "Golden Retriever laying on its back">
+                <img src="images/daisy.gif" width ="300" height="300" alt = "Gif of Golden Retriever wagging its tail">    
             <ul>
                 <li>Age: 1 year old (parenting a teenager is hard!) </li>
                 <li>Breed: Golden Retriever but, she identifies as a poodle </li>
@@ -70,17 +87,13 @@
                 <li>Loves long walks especially if we walk by the neigbhors house. (She has a crush on duke, no he is not a dog)</li>
                 <li>Loves swimming in the pool</li>
                 <li>She loves people and gets grumpy if left without a lap too long</li>
-            </ul>
-            <h3>Photo Gallery</h3>
-            <img src="images/daisy_3.jpg" width ="300" height="300" alt = "Golden Retriever eating dog food">
-            <img src="images/daisy_2.jpg" width ="300" height="300" alt = "Golden Retriever laying on its back">
-            <img src="images/daisy.gif" width ="300" height="300" alt = "Gif of Golden Retriever wagging its tail">    
-        </div>
-        
-        
-        <div>
+            </ul>   
+
             <h2>Say Hi to Luna</h2>
             <img src="images/Siberian-Husky-standing-outdoors-in-the-winter.jpg.webp" width ="300" height="300" alt="Husky standing outside in the snow">
+            <img src="images/luna_02.jpg" width ="300" height="300" alt = "Siberian Husky walking in the snow">
+            <img src="images/husky_snow.jpg" width ="300" height="300" alt = "Siberian Husky laying in the snow">
+            <img src="images/lunapup.jpg" width ="300" height="300" alt = "Siberian Husky puppy sitting in the snow">    
             <ul>
                 <li>Age: 6 year old (going through a mid-dog crisis) </li>
                 <li>Breed: Siberian Husky </li>
@@ -98,11 +111,8 @@
                 <li>Running and digging holes in the snow</li>
                 <li>She loves taking naps on the balcony</li>
             </ul>
-            <h3>Photo Gallery</h3>
-            <img src="images/luna_02.jpg" width ="300" height="300" alt = "Siberian Husky walking in the snow">
-            <img src="images/husky_snow.jpg" width ="300" height="300" alt = "Siberian Husky laying in the snow">
-            <img src="images/lunapup.jpg" width ="300" height="300" alt = "Siberian Husky puppy sitting in the snow">    
         </div>
+    </div>
     </main>
     <footer>
 		<p> Pet Pantry &copy; 2024</p>
