--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
         
     <div class="home-img">
-            <img src="images/istock-182214502.jpg">
+            <img src="images/istock-182214502.jpg" alt="Six different breeds of dogs looking up">
+	    
             <main id="content">
         </div>
     </section>
