--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <section class="about" id="about">   
+    <div class="about">   
         
         <div class="about-text">
             <h2>About Us</h2>
@@ -53,9 +53,8 @@
             <h2>Our Mission</h2>
             <p>Our mission is to provide you with the best content on the web. We're committed to bringing you the latest and greatest in pet care, recipes, and travel. We're here to help you live your best life, and we're excited to be a part of your journey!</p>
         </div>
-    </section>
 
-    <section class="services" id="services">
+    <div class="services">
         <div class="about-community">
             <h2>Our Community</h2>
             <p>Our community offers insight into food, travel, and pet breeds.</p>
@@ -97,8 +96,7 @@
                         <h3>Our Team</h3>
                         <p>Meet the people behind the content. Our passionate team works hard to find and publish your favorite content.</p>
                 </div>
-    </section>
-<section class="contact" id="contact">
+		
     <div class="contact-text">
         <h3>Contact Us</h3>
         <p>Have a question or want to learn more? Contact us at 212-675-7896 or visit us at 1120 Pet Lane, Ann Arbor, MI</p>
