--- a/travel.html
+++ b/travel.html
@@ -30,7 +30,7 @@
     </header>
     
     <main>
-        <a id='skip-nav' class='screenreader-text' href='#main-content'>
+        <a id='skip-nav' class="skip">Skip to main content> href='#main'</a>
         <section class="travel-page" id="ttravel-page">   
             <div class="travel-title"> 
                     <h1>Travel With Us</h1>
