--- a/pets.html
+++ b/pets.html
@@ -36,6 +36,7 @@
              <h1>Meet Our Furry Pals</h1>
              <p>Here are some of our favorite furry pals!</p> 
         </div>
+    </section>
  
         <div class = "pets-container">
             <h2>Say Hi to Bacon</h2>
@@ -110,8 +111,7 @@
                 <li>Cuddling with her puppies</li>
                 <li>Running and digging holes in the snow</li>
                 <li>She loves taking naps on the balcony</li>
-            </ul>
-        </div>
+	    </ul>
     </div>
     </main>
     <footer>
