--- a/recipes.html
+++ b/recipes.html
@@ -30,11 +30,12 @@
     
     <main>
 	<a href="#main" class="skip">Skip to main content</a>
-        <section class="recipe-page" id="recipe-page">   
+        <section class="recipe-page" id="recipe-page">
             <div class="recipe-title">
                 <h1>Let's Eat</h1>
                 <p>Here are some of our favorite recipes!</p>
             </div>
+	</section>
             <div class = "recipe-container">
                 <h2>Double Chocolate Cookies Recipe</h2>
                 <p>Author: Sarah Yiler</p>
