--- a/travel.html
+++ b/travel.html
@@ -31,7 +31,8 @@
     
     <main>
         <a id='skip-nav' class="skip">Skip to main content> href='#main'</a>
-        <section class="travel-page" id="ttravel-page">   
+        <section class="travel-page" id="ttravel-page">
+        </section>
             <div class="travel-title"> 
                     <h1>Travel With Us</h1>
                     <p>Here are some of our favorite travel destinations!</p>
