--- a/travel.html
+++ b/travel.html
@@ -31,12 +31,12 @@
     
     <main>
         <a id='skip-nav' class="skip">Skip to main content> href='#main'</a>
-        <section class="travel-page" id="ttravel-page">
-        </section>
+        <section class="travel-page" id="travel-page">
             <div class="travel-title"> 
                     <h1>Travel With Us</h1>
                     <p>Here are some of our favorite travel destinations!</p>
             </div>
+        </section>
             <div class = "travel-container">
             <h2>Welcome to New York City</h2>
             <img src="images/istockphoto-615398376-170667a.webp" width = "400" alt="Image of New York City landscape">
