--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </div>
         
         <div class="services-container">
-            <div class="service-box">	
+            <div class="service-box">
+		     </div>
                 <div class="service-img">
                     <img src= "images/husky_snow.jpg" alt="Image of a Husky dog in the snow">
                 </div>
