--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
         
         <div class="services-container">
+	</div>
             <div class="service-box">
 		     </div>
                 <div class="service-img">
