--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     
 <main>
-	<a href="#main" class="skip">Skip to main content</a>
+	<a href="#content" class="skip">Skip to main content</a>
         <div class="home-welcome">
         <h1>Welcome to Pet Pantry</h1>
         <p>Your go-to destination for all things pets, recipes, and travel!</p>
@@ -40,7 +40,8 @@
 	    
         </div>
 
-    <div class="about">   
+    <main id="content role="main">
+    <div class="about">
         </div>	
         <div class="about-text">
             <h2>About Us</h2>
