--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
         </div>
 
     <main id="content role="main">
-    <div class="about">
+    
+<div class="about">
         </div>	
+	      <div class="services">
+	    </div>	
         <div class="about-text">
             <h2>About Us</h2>
             <p>Our founders loved taking their pets on trips and soon realized other pet enthusiast did to. We were founded in 2019 by a group of friends who wanted to create a place where people could come together and share their love of pets, food, and travel. </p>
         </div>
 
+     <div class="services">
+	    </div>	
         <div class="about-mission">
             <h2>Our Mission</h2>
             <p>Our mission is to provide you with the best content on the web. We're committed to bringing you the latest and greatest in pet care, recipes, and travel. We're here to help you live your best life, and we're excited to be a part of your journey!</p>
