--- a/pets.html
+++ b/pets.html
@@ -30,14 +30,14 @@
     </header>
 
 <main>
-    <a href="#main" class="skip">Skip to main content</a>
+   <a href="#content" class="skip">Skip to main content</a>
     <section class="pets-page" id="pets-page">   
         <div class="pets-title">
              <h1>Meet Our Furry Pals</h1>
              <p>Here are some of our favorite furry pals!</p> 
         </div>
     </section>
- 
+ 	<main id="content role="main">
         <div class = "pets-container">
             <h2>Say Hi to Bacon</h2>
             <img src="images/bacon.jpg" width = "300" height="300" alt="Brown labradoodle wearing colorful lei">
