--- a/travel.html
+++ b/travel.html
@@ -18,7 +18,7 @@
     <header class="header">
         <a href="#" class="logo"> Pet Pantry </a>
         <div class="bx bx-menu" id="menu-icon"></div>
-        <a href="#main" class="skip">Skip to main content</a>
+    
         <nav>
         <ul class="navbar">
             <li><a href="index.html" > Home </a></li>
@@ -30,7 +30,7 @@
     </header>
     
     <main>
-        <a id='skip-nav' class="skip">Skip to main content> href='#main'</a>
+        <a href="#content" class="skip">Skip to main content</a>
         <section class="travel-page" id="travel-page">
             <div class="travel-title"> 
                     <h1>Travel With Us</h1>
