--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,6 @@
     <header class="header">
         <a href="#" class="logo"> Pet Pantry </a>
         <div class="bx bx-menu" id="menu-icon"></div>
-        <a href="#main" class="skip">Skip to main content</a>
         <nav>
         <ul class="navbar">
             <li><a href="index.html" > Home </a></li>
@@ -29,7 +28,7 @@
     </header>
     
     <main>
-	<a href="#main" class="skip">Skip to main content</a>
+	<a href="#content" class="skip">Skip to main content</a>
         <section class="recipe-page" id="recipe-page">
             <div class="recipe-title">
                 <h1>Let's Eat</h1>
